[package]
name = "si-vis"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
chrono = "0.4.26"
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
sysinfo = "0.29.4"
